--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/02/02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned while trying to swim from Morocco to the Spanish enclave of Melilla (ES)</b><br>Source: MNS/MUGAK<br>
+Found dead: <b>Feb 1994</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>missing, reportedly drowned in the Mediterranean Sea while travelling to Italy</b><br>Source: ILM/IRR<br>
 
 <br>
 
