--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 1994</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>missing, reportedly drowned in the Mediterranean Sea while travelling to Italy</b><br>Source: ILM/IRR<br>
+Found dead: <b>17/08/09</b><br>Number of person: <b>27</b><br>Name, gender, age: <b>N.N. (1 man)</b><br>Region of origin: <b>Sub-Saharan Africa, Morocco</b><br>Cause of death: <b>7 drowned in shipwreck near Trafalgar beach (ES); 20 missing; 10 survived</b><br>Source: LatinAHTribune<br>
 
 <br>
 
