--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/07/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned near the Spanish enclave of Ceuta (ES) reportedly trying to reach Spain</b><br>Source: MNS/VK<br>
+Found dead: <b>03/10/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after ship sank in international waters while travelling from North Africa to Lampedusa (IT)</b><br>Source: Ya.N/GDS/ILM/IPL/TL<br>
 
 <br>
 
