--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/08</b><br>Number of person: <b>37</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>West Africa</b><br>Cause of death: <b>drowned on way to Europe, wrecked boat and bodies found near Libreville (GA)</b><br>Source: NOB/Reu.<br>
+Found dead: <b>11/09/95</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>reportedly drowned after dinghy caught fire and capsized in the Strait of Otranto</b><br>Source: CDS/FECL/TL<br>
 
 <br>
 
