--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/06/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Pat (woman, 22)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>found dead in her flat in Dublin (IE) after being refused asylum, was reportedly served deportation notice</b><br>Source: IrishTimes<br>
+Found dead: <b>25/12/02</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned when dinghy sank off coast of Chios (GR)</b><br>Source: AP<br>
 
 <br>
 
