--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/05/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned trying to cross the Strait of Gibraltar</b><br>Source: ICARE/TheEntertainerOnline<br>
+Found dead: <b>29/09/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 boys, 4, 5)</b><br>Region of origin: <b>Somalia, Kurdistan</b><br>Cause of death: <b>drowned after falling into water while playing near asylum centre in Harlingen (NL)</b><br>Source: VK<br>
 
 <br>
 
