--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Giorgio (man)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>died when raft capsized near the Spanish enclave of Ceuta (ES) due to brutal navy intervention</b><br>Source: CadSER/GADEM<br>
+Found dead: <b>01/11/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>found in advanced state of decomposition in the Mediterranean Sea near Delimara (MT)</b><br>Source: TimesM/NOB<br>
 
 <br>
 
