--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/09/04</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>reportedly drowned in shipwreck near Fuerteventura (ES)</b><br>Source: MUGAK/PICUM/MNS<br>
+Found dead: <b>17/11/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Avtar Singh (man, 37)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>suicide, in Canterbury prison (GB) for holding fake passport, devastated to be unable to support family in India</b><br>Source: IRR<br>
 
 <br>
 
