--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/06/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Dominican Republic</b><br>Cause of death: <b>stowaways, froze to death while hiding in plane bound for Stockholm (SE)</b><br>Source: BBC<br>
+Found dead: <b>14/11/16</b><br>Number of person: <b>135</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly missing after dinghy to Italy sank in the Mediterranean Sea; 15 rescued</b><br>Source: AFP/UNHCR/MOAS<br>
 
 <br>
 
