--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Russia</b><br>Cause of death: <b>suicide, hanged himself in Polmont prison (GB) out of fear of deportation</b><br>Source: PAIH<br>
+Found dead: <b>09/04/18</b><br>Number of person: <b>36</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>6 presumed drowned off coast of Houara 20 km south of Tangiers (MA); 30 missing, 10 survived</b><br>Source: EFE/Caminando/El Diario/IOM<br>
 
 <br>
 
