--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1994</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Rwanda</b><br>Cause of death: <b>stowaways, drowned after being thrown overboard by Dutch ship captain while travelling to Greece</b><br>Source: Eleftherotipra/MNS<br>
+Found dead: <b>24/08/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 children)</b><br>Region of origin: <b>Libya</b><br>Cause of death: <b>reportedly died on boat travelling to Italy (IT)</b><br>Source: LR<br>
 
 <br>
 
