--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/12/17</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>3 drowned, bodies found off Messida beach in El Kala (DZ); 5 missing, 4 survivors</b><br>Source: QUOTI/IOM<br>
+Found dead: <b>1995</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mathias Zohere (man)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>suicide, hanged himself in Ivory Coast prison after asylum claim was rejected in Germany</b><br>Source: ZAG<br>
 
 <br>
 
