--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1995</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mathias Zohere (man)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>suicide, hanged himself in Ivory Coast prison after asylum claim was rejected in Germany</b><br>Source: ZAG<br>
+Found dead: <b>1999</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Margota (baby)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>died of heart attack when police raided Roma camp in Casalino (IT)</b><br>Source: IRR<br>
 
 <br>
 
