--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/11/17</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 child; 3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>3 drowned, bodies found near Santa Catalina in Ceuta (ES); 1 missing</b><br>Source: FaroCeuta/Caminando/IOM<br>
+Found dead: <b>28/05/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Djamaa Isu (man, 21)</b><br>Region of origin: <b>Chad</b><br>Cause of death: <b>suicide, in refugee camp in Eisenhüttenstadt (DE)</b><br>Source: Karawane/VRF/Berliner Ztg<br>
 
 <br>
 
