--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/04/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot dead by Greek coast guard on boat in the Mediterranean Sea travelling to Greece; suspected smuggler</b><br>Source: Reu./JW<br>
+Found dead: <b>21/08/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nasser Ahmed (man, 36)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>suicide, hanged himself in Nelson (GB) after asylum claim was rejected</b><br>Source: MNS/IRR/CARF/NCADC<br>
 
 <br>
 
