--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/08/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nasser Ahmed (man, 36)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>suicide, hanged himself in Nelson (GB) after asylum claim was rejected</b><br>Source: MNS/IRR/CARF/NCADC<br>
+Found dead: <b>23/04/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>suicide, hanged himself in police cell in Eislingen (DE) out of fear of deportation</b><br>Source: IRR/CARF/ZAG<br>
 
 <br>
 
