--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nashreddine (man)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died in a fire caused by rebellion in detention centre in Seraino Vulpitta di Trapani (IT)</b><br>Source: CDS/taz/MUGAK/MP/ARCI/L.B.CPT/GdV/quibla<br>
+Found dead: <b>19/09/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>suicide, set himself on fire in Castellón (ES) after being denied help with voluntary repatriation</b><br>Source: MNS<br>
 
 <br>
 
