--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jul 14</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>4 drowned when boat sank off Ayvalik (TR); 1 missing, 12 rescued</b><br>Source: Imkander<br>
+Found dead: <b>02/04/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body recovered near Panagiouda, Lesbos (GR)</b><br>Source: HelCoastG/IOM<br>
 
 <br>
 
