--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned trying to reach Greece near Ayvacik (TR); 7 rescued</b><br>Source: Imkander<br>
+Found dead: <b>09/11/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Istref Bajrami (man)</b><br>Region of origin: <b>Kosovo (Roma)</b><br>Cause of death: <b>killed after returning to village of origin near Pristina (KS)</b><br>Source: ERRC<br>
 
 <br>
 
