--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found near Port of Cabopino in Málaga (ES)</b><br>Source: Hoy/LV/Onda/IOM<br>
+Found dead: <b>16/01/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rojg Nesarajah (boy, 2)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>killed in fire started by his mother in a refugee centre in Førde (NO) after her asylum was rejected; she also died</b><br>Source: NRK<br>
 
 <br>
 
