--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/99</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (4 children; 8 adults)</b><br>Region of origin: <b>Pakistan, Afghanistan</b><br>Cause of death: <b>reportedly drowned in the Tisza River while trying to cross Ukrainian-Hungarian border</b><br>Source: taz/AFP/IRR/INexile<br>
+Found dead: <b>02/09/06</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Eritrea, Somalia</b><br>Cause of death: <b>died of hunger and dehydration on way to Italy, bodies thrown overboard</b><br>Source: LR/FE/MNS/PICUM/Unipa/LR<br>
 
 <br>
 
