--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1994</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>drowned while trying to escape detention centre in Fort Walem (BE)</b><br>Source: De Stoop<br>
+Found dead: <b>May 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (baby)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>died in labour after doctor refused to help at first aid station near Caserta (IT)</b><br>Source: CARF/IRR/Searchlight<br>
 
 <br>
 
