--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 14</b><br>Number of person: <b>180</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria, Sub-Saharan Africa</b><br>Cause of death: <b>30 drowned after vessel capsized off coast of Libya; 150 missing, 70 rescued</b><br>Source: MNS<br>
+Found dead: <b>14/05/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead during rescue operation in the Mediterranean Sea; 484 rescued</b><br>Source: RTLNieuws<br>
 
 <br>
 
