--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/05/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead during rescue operation in the Mediterranean Sea; 484 rescued</b><br>Source: RTLNieuws<br>
+Found dead: <b>2007</b><br>Number of person: <b>50</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died after smugglers fleeing Greek coast guards forced them overboard</b><br>Source: GHM<br>
 
 <br>
 
