--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Pradeepan</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in sealed trailer in Györ (HU)</b><br>Source: Reu./AP/DAZ/Budapestsun/ZAG<br>
+Found dead: <b>Jun 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mrs. Rostas (woman)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>drowned in the Neisse River on the Polish-German border</b><br>Source: Aktion Zuflucht/ZAG<br>
 
 <br>
 
