--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2001</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Gevour Gworkiyan (man, 20)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>suicide, jumped in front of train in Den Bosch (NL)</b><br>Source: PRIME<br>
+Found dead: <b>Feb 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Idris Demir (man)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>rejected asylum seeker, shot trying to escape from police in Jönköping (SE)</b><br>Source: IRR/MNS<br>
 
 <br>
 
