--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Sep 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after ship capsized approximately 200 metres from southern coast of Sicily (IT)</b><br>Source: SP<br>
+Found dead: <b>27/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±30)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of hypothermia, body found by police on shore of the Evros River (GR)</b><br>Source: MNS/PICUM<br>
 
 <br>
 
